# crm-fitness

./: .gitignore  .gitlab-ci.yml  docker-compose.lint.yml  docker-compose.yml  documentation.md  readme.md
source/: Dockerfile  pyproject.toml
source/api_v1/: permissions.py  serializers.py  urls.py
source/api_v1/tests/: __init__.py  cache_api_tests.py  client_api_tests.py  coach_api_tests.py  group_api_tests.py  trainings_api_tests.py
source/api_v1/views/: __init__.py  cache_api_views.py  client_api_views.py  coach_api_views.py  group_api_views.py  lazy_days_payments_api.py  statistics.py  trainings_api_views.py
source/fixtures/: auth.json
source/main/: settings.py
source/webapp/: abstract_models.py  admin.py  factory.py  filters.py  forms.py  manager.py  models.py  urls.py
source/webapp/docks/: ModelSchema.drawio.xml
source/webapp/migrations/: 0022_remove_client_telegram_name_client_telegram_id.py  0023_remove_coach_telegram_name_coach_telegram_id.py  0024_remove_client_payment_end_date_and_more.py  0025_lazydays.py  0026_auto_20230421_0923.py  0027_alter_client_options_alter_coach_options_and_more.py
source/webapp/templates/: base.html
source/webapp/tests/: __init__.py  selenium_client_test.py  selenium_coach_test.py  selenium_group_test.py  selenium_payment_test.py  selenium_training_test.py  unit_client_tests.py  unit_coach_tests.py  unit_group_tests.py  unit_payment_tests.py  unit_training_tests.py
tg_bot/: client_logic.py  fsm.py  invite_logic.py  keyboards.py  mailing_logic.py  main.py  pyproject.toml  tg_data.py  validators.py
(+31 files in other folders)
