[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["Ray888Ray <ilimirgashev@gmail.com>"]
readme = "README.md"
packages = [{include = "tg_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
redis = "^4.5.3"
pillow = "^9.5.0"
tensorflow-datasets = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"